# comfyui-anima-style-nodes

./: .gitignore  DATA_SOURCE.md  LICENSE  README.md  __init__.py  artist_data.py  nodes.py  pyproject.toml  routes.py  routes_core.py  routes_favorites.py  routes_fullet.py
data/: artists.json
js/: autocomplete.js  autocycle.js  browser.js  browser_cards.js  browser_events.js  browser_favorites.js  browser_helpers.js  browser_renderers.js  browser_template.js  browser_upload_picker.js  config.js  data.js  index.js  styles.js  swipe.js  toast.js  utils.js
