[project]
name = "comfyui-anima-style-nodes"
description = "A quality-of-life node for ComfyUI that lets you browse 5000+ anime artists and styles, visually select tags (Danbooru-based), and autocomplete prompts with artistic styles for Anima-2b."
version = "1.0.2"
license = {text = "MIT License"}
dependencies = ["aiohttp"]
authors = [{ name = "fulletlab" }]

[project.urls]
Repository = "https://github.com/fulletlab/comfyui-anima-style-nodes"

[tool.comfy]
PublisherId = "fulletlab"
DisplayName = "Anima Style Explorer"
Icon = "https://raw.githubusercontent.com/fulletlab/comfyui-anima-style-nodes/main/assets/banner.jpg"
